# service_template

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  rust-toolchain.toml
.github/workflows/: build.yml
proto/: {{crate_name}}.proto
src/: lib.rs  lib.rs.liquid  {{crate_name}}_impl.rs  {{crate_name}}_impl.rs.liquid
