[package]
name = "{{crate_name}}_service"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{service_description}}"

[dependencies]
prost = "0.12.3"
prost-derive = "0.12.3"
prost-types = "0.12.3"
tokio = {version = "1.27.0",  features = ["full"] }
tonic = {version = "0.10.2", features = ["codegen"] }
tonic-reflection = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
glob = "0.3.1"
