[package]
name = "{{crate_name}}_service"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{service_description}}"

[dependencies]
prost = "0.12.6"
prost-derive = "0.12.6"
prost-types = "0.12.6"
tokio = {version = "1.38.0",  features = ["full"] }
tonic = {version = "0.11.0", features = ["codegen"] }
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
glob = "0.3.1"
